ActionItem664: fixed overflow:hidden hiding buttons
git-svn-id: https://svn.colivre.coop.br/svn/noosfero/branches/0.11.x@2491 3f533792-8f58-4932-b0fe-aaf55b0a4547

--- a/public/stylesheets/blocks/main-block.css
+++ b/public/stylesheets/blocks/main-block.css
@@ -2,6 +2,6 @@
    Use article.css for article related css
 */
 
-.main-block {
+.main-block .article-body, .main-block h1 {
   overflow: hidden;
 }
